tests/security/transformTaintChannelStorePattern/output.txt
ERROR: TaintedData - input.hack:35:12 - Data from unauthorized user data found its way to generic output using path $_POST --array-fetch--> arrayvalue-fetch (input.hack:32:36) ----> $encoded_channel_id (input.hack:32:5) ----> decode_channel#1 (input.hack:33:34) ----> call to decode_channel (input.hack:3:4) ----> $channel_id (input.hack:33:5) ----> ChannelStore::fetchById#1 (input.hack:21:60) ----> $channel_id (input.hack:21:60) --array-assignment--> array[name] (input.hack:23:43) ----> composition (input.hack:23:28) ----> Channel::__construct#1 (input.hack:10:54) ----> $row (input.hack:10:54) ----> $this->channel_row (input.hack:11:16) --property-assignment--> $this (input.hack:11:9) ----> $this in Channel after __construct (input.hack:10:21) ----> return (input.hack:23:16) ----> call to ChannelStore::fetchById (input.hack:22:8) ----> $channel (input.hack:34:5) ----> $this in Channel before getName (input.hack:14:21) ----> $this (input.hack:15:16) --property-fetch--> $this->channel_row (input.hack:15:23) --array-fetch--> $this->channel_row['name'] (input.hack:15:16) ----> return (input.hack:15:16) ----> call to Channel::getName (input.hack:14:32) ----> render#1 (input.hack:35:12)
